# Fractal-Clock

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
FractalClockGL/: CMakeLists.txt  Clock.cpp  Clock.h  Drawable.cpp  Drawable.h  FractalClock.cpp  FractalClock.h  InternalShader.h  Main.cpp  Program.cpp  Program.h  Shader.cpp  Shader.h  SubClock.cpp  SubClock.h  Vertex.h  copy.bat  generate_shader_header.py
FractalClockGL/Maths/: Maths.h
FractalClockGL/Resources/Shaders/: Frag.shader  Geom.shader  Vertex.shader
